--- a/css/mobile.css
+++ b/css/mobile.css
@@ -27,4 +27,26 @@
   .footer__list-item {
     margin-bottom: 10px;
   }
+  .login {
+    margin-top: 0;
+  }
+  .login .login__column:first-child {
+    display: none;
+  }
+  .login .login__column {
+    width: 100%;
+  }
+  .login .login__box {
+    background-color: transparent;
+    border: none;
+  }
+  .explore {
+    background-color: transparent;
+    border: 0;
+    margin-top: 0;
+  }
+  .explore .users__user {
+    border: 0;
+    padding: 5px 10px;
+  }
 }
